--- a/faker/composer.json
+++ b/faker/composer.json
@@ -7,6 +7,7 @@
         }
     ],
     "require": {
-        "fzaninotto/faker": "^1.7"
+        "fzaninotto/faker": "^1.7",
+        "doctrine/dbal": "^2.7"
     }
 }
